--- a/src/App.module.css
+++ b/src/App.module.css
@@ -13,3 +13,17 @@
   color: rgb(40, 40, 0);
   text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
 }
+
+.notification {
+  margin: 20px auto;
+  padding: 10px 0;
+  width: 300px;
+  text-align: center;
+
+  font-size: 16px;
+  font-weight: 500;
+
+  background-color: rgb(255, 255, 170);
+  border: 1px solid rgb(190, 190, 190);
+  border-radius: 6px;
+}
